--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                      <img class="margin-bottom full-img" src="img/About.png">
                   </div>
                   <div class="s-12 m-6 l-3">
-                     <img class="margin-bottom full-img" src="img/DSC_7460_opt.jpg">
+                     <img class="margin-bottom full-img" src="img/">
                   </div>
                   <div class="s-12 m-6 l-3">
                      <img class="margin-bottom full-img" src="img/DSC_7468_opt.jpg">
