--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
          <div id="carousel">
             <div id="header-carousel" class="owl-carousel owl-theme">
                <div class="item">
-                  <img src="img/DSC_7471_opt.jpg" alt="Sample project photo 1">
+                  <img src="img/DSC027162.JPG" alt="Sample project photo 1">
                   <div class="line">
                      <h2></h2>
                   </div>
                </div>
                <div class="item">
-                  <img src="img/DSC_7471_opt.jpg" alt="Sample project photo 1">
+                  <img src="img/DSC027222.jpeg" alt="Sample project photo 1">
                   <div class="line">
                      <h2></h2>
                   </div>
                </div>
                <div class="item">
-                  <img src="img/DSC_7471_opt.jpg" alt="Sample project photo 3">
+                  <img src="img/DSC02727.jpeg" alt="Sample project photo 3">
                   <div class="line">
                      <h2></h2>
                   </div>
